GNOME Bugzilla – Bug 736696
gvfs-set-attribute doesn't implement -n
Last modified: 2014-09-27 08:34:37 UTC
gvfs-set-attribute has a "-n" flag but it does nothing.
Created attachment 286233 [details] [review] gvfs-set-attribute: Actually implement "-n" flag Allow setting attributes on symlinks by actually implementing the "-n" flag rather than just ignoring it.
Review of attachment 286233 [details] [review]: Looks good, thanks!
Pushed to master as fab432937b4bfcd56c07c8be3e14335612bd42f3. Thanks for the review!