gvfs-set-attribute: Actually implement "-n" flag

Allow setting attributes on symlinks by actually implementing the "-n"
flag rather than just ignoring it.

https://bugzilla.gnome.org/show_bug.cgi?id=736696